fix kgi + cleaned some things